refactor: use deque for screen and scrollback rows